[package]
name = "nand-to-browser"
version = "0.1.0"
edition = "2021"
authors = ["Felix Schoeller <felix.schoeller@protonmail.com>"]
description = "A Nand to Tetris Emulator implementation that can run in the browser"
license-file = "LICENSE"

[[bin]]
name = "n2t"
path = "src/bin.rs"

# wasm packages must be cdylib
[lib]
crate-type = ["cdylib", "rlib"]

[features]
trace_vm = []      # this will just print information on any executed instruction while running the vm
trace_calls = []   # if this is enabled, calls will be traced even if trace_vm is disabled
desktop = ["sdl2"] # run the application as a desktop app by rendering to an SDL window
default = ["console_error_panic_hook"]

[dependencies]
# dependencies that are always needed
lazy_static = "1.4"

# web dependencies
wasm-bindgen = { version = "0.2" }
# make some javascript functions/types accessible from rust
web-sys = { version = "0.3", features = ['ImageData'] }
# logs panics with console.err which is nice for debugging
console_error_panic_hook = { version = "0.1.7", optional = true }

# for the desktop version
sdl2 = { version = "0.35.2", optional = true }

[profile.release]
# optimize for small code size to reduce the download time on first page load
opt-level = "s"
